syntax = "proto3";

package miningpool.middleware.app.pool.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/miningpool/middleware/v1/app/pool";

import "basetypes/v1/conds.proto";

message PoolReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string PoolID = 30;
}

message Pool {
  // @inject_tag: sql:"id"
  uint32 ID = 10;
  // @inject_tag: sql:"ent_id"
  string EntID = 20;
  // @inject_tag: sql:"app_id"
  string AppID = 30;
  // @inject_tag: sql:"pool_id"
  string PoolID = 40;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 110;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 120;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal PoolID = 30;
  optional basetypes.v1.StringSliceVal EntIDs = 40;
}

